# WireShade

./: .gitignore  Cargo.toml  LICENSE  README.de.md  README.es.md  README.fr.md  README.md  README.zh.md  SECURITY.md  ghostwire.win32-x64-msvc.node  index.js  package-lock.json  package.json  parallel_output.txt  wireshade.win32-x64-msvc.node
.github/workflows/: publish.yml
examples/: 01_quickstart.js  02_http_request.js  03_https_custom_dns.js  04_tcp_socket.js  05_internet_routing.js  06_simple_server.js  07_express_app.js  08_local_forwarding.js  09_reconnect_config.js  10_remote_forwarding.js  README.md  _legacy_easy_api.js  wireguard.conf
lib/: agent.js  client.js  config_parser.js  server.js
src/: lib.rs
